@@ -8,22 +8,44 @@ import java.time.LocalDate;
 import java.time.ZoneId;
 import java.util.*;
 
+/**
+ * Класс Receiver отвечает за управление коллекцией объектов MusicBand.
+ * <p>
+ * Этот класс предоставляет методы для выполнения операций с коллекцией,
+ * таких как добавление, удаление, обновление, поиск и другие.
+ * Также он загружает данные из файла и сохраняет их обратно.
+ * </p>
+ */
 public class Receiver {
-    private final ArrayList<MusicBand> bands = new ArrayList<>();
-    private static Receiver instance;
-    private final LocalDate date;
+    private final ArrayList<MusicBand> bands = new ArrayList<>(); // Коллекция для хранения объектов MusicBand.
 
-    {date = LocalDate.now();
+    private static Receiver instance; // Единственный экземпляр класса Receiver (реализация паттерна Singleton).
+
+    private final LocalDate date; // Дата инициализации коллекции.
+
+    {
+        date = LocalDate.now(); // Устанавливаем текущую дату при создании объекта.
     }
 
-
+    /**
+     * Приватный конструктор для реализации паттерна Singleton.
+     */
     private Receiver() {
     }
 
+    /**
+     * Перемешивает элементы коллекции в случайном порядке.
+     */
     public void shuffle() {
         Collections.shuffle(bands);
     }
 
+    /**
+     * Обновляет элемент коллекции по указанному id.
+     *
+     * @param idCounter id элемента, который нужно обновить
+     * @param band новый объект MusicBand для замены
+     */
     public void updateId(int idCounter, MusicBand band) {
         for (MusicBand b : bands) {
             if (b.getId() == idCounter) {
@@ -34,10 +56,19 @@ public class Receiver {
         }
     }
 
+    /**
+     * Очищает коллекцию, удаляя все элементы.
+     */
     public void clear() {
         bands.clear();
     }
 
+    /**
+     * Проверяет, существует ли элемент с указанным id в коллекции.
+     *
+     * @param id id элемента для проверки
+     * @return true, если элемент существует, иначе false
+     */
     public boolean containsId(int id) {
         for (MusicBand band : bands) {
             if (band.getId() == id) {
@@ -47,6 +78,11 @@ public class Receiver {
         return false;
     }
 
+    /**
+     * Добавляет элемент в коллекцию, если его значение превышает значение наибольшего элемента.
+     *
+     * @param band объект MusicBand для добавления
+     */
     public void addIfMax(MusicBand band) {
         boolean flag = true;
         for (MusicBand b : bands) {
@@ -62,6 +98,11 @@ public class Receiver {
         }
     }
 
+    /**
+     * Добавляет элемент в коллекцию, если его значение меньше значения наименьшего элемента.
+     *
+     * @param band объект MusicBand для добавления
+     */
     public void addIfMin(MusicBand band) {
         boolean flag = true;
         for (MusicBand b : bands) {
@@ -77,6 +118,9 @@ public class Receiver {
         }
     }
 
+    /**
+     * Загружает данные из файла в коллекцию.
+     */
     private void loadFromFile() {
         String fileName = System.getenv("FILE_NAME_READ");
         if (fileName == null) {
@@ -85,32 +129,67 @@ public class Receiver {
         }
 
         ArrayList<MusicBand> loadedBands = DOMReader.readFromFile(fileName);
-        bands.addAll(loadedBands);
-        System.out.println("Successfully loaded " + loadedBands.size() + " music-band objects");
+        if (loadedBands == null) {
+            System.err.println("Could not read the file " + fileName);
+        } else {
+            bands.addAll(loadedBands);
+            System.out.println("Successfully loaded " + loadedBands.size() + " music-band objects");
+        }
     }
 
+    /**
+     * Добавляет объект MusicBand в коллекцию.
+     *
+     * @param band объект MusicBand для добавления
+     */
     public void add(MusicBand band) {
         bands.add(band);
     }
 
+    /**
+     * Возвращает дату инициализации коллекции.
+     *
+     * @return дата инициализации коллекции
+     */
     public LocalDate getDate() {
         return date;
     }
 
+    /**
+     * Выводит все элементы коллекции в строковом представлении.
+     */
     public void showList() {
         for (MusicBand band : bands) {
             System.out.println(band);
         }
+        if (bands.isEmpty()) {
+            System.out.println("The collection is empty");
+        }
     }
 
+    /**
+     * Возвращает тип коллекции.
+     *
+     * @return тип коллекции
+     */
     public String getType() {
         return bands.getClass().getSimpleName();
     }
 
+    /**
+     * Возвращает количество элементов в коллекции.
+     *
+     * @return количество элементов в коллекции
+     */
     public int getLength() {
         return bands.size();
     }
 
+    /**
+     * Возвращает единственный экземпляр класса Receiver (реализация паттерна Singleton).
+     *
+     * @return экземпляр Receiver
+     */
     public static Receiver getInstance() {
         if (instance == null) {
             instance = new Receiver();
@@ -119,6 +198,9 @@ public class Receiver {
         return instance;
     }
 
+    /**
+     * Сохраняет коллекцию в файл.
+     */
     public void save() {
         String fileName = System.getenv("FILE_NAME_WRITE");
         if (fileName == null) {
@@ -128,9 +210,14 @@ public class Receiver {
         DOMWriter.writeToFile(fileName, bands);
     }
 
+    /**
+     * Создает объект MusicBand на основе введенных пользователем данных.
+     *
+     * @param scanner сканер для ввода данных
+     * @return новый объект MusicBand
+     */
     public MusicBand createMusicBand(Scanner scanner) {
         return new MusicBandBuilder()
-                .setId(generateId()) // Генерация уникального ID
                 .setName(readName(scanner))
                 .setCoordinates(readCoordinates(scanner))
                 .setCreationDate() // Дата создания генерируется автоматически
@@ -140,6 +227,11 @@ public class Receiver {
                 .build();
     }
 
+    /**
+     * Возвращает среднее значение поля numberOfParticipants для всех элементов коллекции.
+     *
+     * @return среднее значение numberOfParticipants
+     */
     public float getAverageNumber() {
         float counter = 0;
         for (MusicBand band : bands) {
@@ -148,6 +240,12 @@ public class Receiver {
         return counter / bands.size();
     }
 
+    /**
+     * Проверяет, что указанная дата не позже текущей даты.
+     *
+     * @param date дата для проверки
+     * @return true, если дата не позже текущей, иначе false
+     */
     public static boolean isDateNotLaterThanToday(Date date) {
         if (date == null) {
             return true; // Или false, если null недопустимо
@@ -157,8 +255,11 @@ public class Receiver {
         return !inputDate.isAfter(today);
     }
 
+    /**
+     * Выводит элемент коллекции с максимальным значением поля genre.
+     */
     public void maxByGenre() {
-        MusicBand band = bands.getFirst();
+        MusicBand band = bands.get(0);
         MusicGenre genre = band.getGenre();
         for (MusicBand b : bands) {
             if (b.getGenre().compareTo(genre) > 0) {
@@ -169,6 +270,11 @@ public class Receiver {
         System.out.println(band);
     }
 
+    /**
+     * Группирует элементы коллекции по значению поля name и возвращает количество элементов в каждой группе.
+     *
+     * @return HashMap, где ключ — имя группы, значение — количество элементов
+     */
     public HashMap<String, Integer> countByName() {
         HashMap<String, Integer> map = new HashMap<>();
         for (MusicBand band : bands) {
@@ -177,7 +283,12 @@ public class Receiver {
         return map;
     }
 
-    // Вспомогательные методы для ввода данных
+    /**
+     * Читает название группы из ввода пользователя.
+     *
+     * @param scanner сканер для ввода данных
+     * @return название группы
+     */
     private String readName(Scanner scanner) {
         while (true) {
             System.out.print("Type name of the band: ");
@@ -190,6 +301,12 @@ public class Receiver {
         }
     }
 
+    /**
+     * Читает координаты из ввода пользователя.
+     *
+     * @param scanner сканер для ввода данных
+     * @return объект Coordinates
+     */
     private Coordinates readCoordinates(Scanner scanner) {
         Double x = null;
         while (x == null) {
@@ -217,6 +334,12 @@ public class Receiver {
         return new Coordinates(x, y);
     }
 
+    /**
+     * Читает количество участников из ввода пользователя.
+     *
+     * @param scanner сканер для ввода данных
+     * @return количество участников
+     */
     private Long readNumberOfParticipants(Scanner scanner) {
         Long numberOfParticipants = null;
         while (numberOfParticipants == null || numberOfParticipants <= 0) {
@@ -237,6 +360,11 @@ public class Receiver {
         return numberOfParticipants;
     }
 
+    /**
+     * Удаляет элемент коллекции по указанному id.
+     *
+     * @param bandId id элемента для удаления
+     */
     public void removeBand(int bandId) {
         Iterator<MusicBand> iterator = bands.iterator();
         while (iterator.hasNext()) {
@@ -247,6 +375,12 @@ public class Receiver {
         }
     }
 
+    /**
+     * Читает музыкальный жанр из ввода пользователя.
+     *
+     * @param scanner сканер для ввода данных
+     * @return объект MusicGenre
+     */
     private MusicGenre readGenre(Scanner scanner) {
         MusicGenre genre = null;
         while (genre == null) {
@@ -265,6 +399,12 @@ public class Receiver {
         return genre;
     }
 
+    /**
+     * Читает данные о фронтмене из ввода пользователя.
+     *
+     * @param scanner сканер для ввода данных
+     * @return объект Person
+     */
     private Person readFrontMan(Scanner scanner) {
         String name = null;
         while (name == null || name.isEmpty()) {
@@ -274,7 +414,6 @@ public class Receiver {
                 System.out.println("Error: The name cannot be empty. Please repeat the input.");
             }
         }
-
 
         java.util.Date birthday = null;
         while (true) {
@@ -328,6 +467,11 @@ public class Receiver {
         return new Person(name, birthday, hairColor, nationality);
     }
 
+    /**
+     * Генерирует уникальный идентификатор на основе текущего времени.
+     *
+     * @return уникальный идентификатор
+     */
     private long generateId() {
         return System.currentTimeMillis(); // Генерация уникального ID
     }
